# pymongo-kit

./: .gitignore  LICENSE  pyproject.toml
pymongokit/: collections.py  documents.py
